--- a/luftig-portfolio/styles/globals.css
+++ b/luftig-portfolio/styles/globals.css
@@ -4,7 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #0b192f;
+  background: rgb(20, 30, 48);
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #243B55, #141E30);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #243B55, #141E30);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 a {
@@ -18,4 +23,9 @@ h2 {
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  font-size: 20px;
+  color: #8591ad;
 }
