fix build errors

--- a/luftig-portfolio/styles/Contact.module.css
+++ b/luftig-portfolio/styles/Contact.module.css
@@ -4,7 +4,12 @@
 
 
 .getInTouch {
+    font-size: 50px;
     color: white;
+    text-align: center;
+}
+
+.contactText {
     text-align: center;
 }
 
