--- a/luftig-portfolio/styles/globals.css
+++ b/luftig-portfolio/styles/globals.css
@@ -29,3 +29,23 @@ p {
   font-size: 20px;
   color: #8591ad;
 }
+
+
+body::-webkit-scrollbar {
+  background-color: #fff;
+  width: 16px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color:rgb(20, 30, 48);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid rgb(20, 30, 48);
+}
+
+body::-webkit-scrollbar-button {
+  display: none;
+}
