--- a/luftig-portfolio/styles/About.module.css
+++ b/luftig-portfolio/styles/About.module.css
@@ -1,3 +1,17 @@
 .container {
     margin-top: 70%;
 }
+
+.aboutContainer {
+    display: flex;
+    width: 80%;
+
+}
+
+.aboutText {
+    width: 70%;
+}
+
+.image {
+    border-radius: 8px;
+}
