--- a/luftig-portfolio/styles/Contact.module.css
+++ b/luftig-portfolio/styles/Contact.module.css
@@ -15,6 +15,8 @@
 
 .emailButton {
     margin: auto;
+    margin-top: 5%;
+    margin-left: auto;
     display: block;
     cursor: pointer;
     padding: 15px 25px;
