--- a/luftig-portfolio/styles/globals.css
+++ b/luftig-portfolio/styles/globals.css
@@ -34,6 +34,11 @@ p {
   color: #8591ad;
 }
 
+span {
+  font-size: 15px;
+  color: #8591ad;
+
+}
 
 body::-webkit-scrollbar {
   background-color: #fff;
